--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
-    "env-var": "^7.4.1",
+    "@types/passport-google-oauth2": "^0.1.8",
+    "@types/passport-jwt": "^4.0.1",
+    "joi": "^17.13.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
