--- a/.env-example
+++ b/.env-example
@@ -1,15 +1,19 @@
-# docker postgres
+# docker > postgres
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=articles
 
-# web
+# app
+NODE_ENV=development
 WEB_URL=http://localhost:3000
 
-# google
+# app > db
+DATABASE_URL=postgres://user:password@127.0.0.1/articles
+
+# app > google
 GOOGLE_CALLBACK_URL=http://localhost:3000/google-oauth/callback
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-# jwt
+# app > jwt
 JWT_SECRET=
