--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -18,12 +19,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "env-cmd npx typeorm -d dist/src/config/migration.config.js",
-    "typeorm:run-migrations": "npm run typeorm migration:run --",
-    "typeorm:generate-migration": "npm run typeorm -- migration:generate ./migrations/%npm_config_name%",
-    "typeorm:create-migration": "npm run typeorm -- migration:create ./migrations/%npm_config_name%",
-    "typeorm:revert-migration": "npm run typeorm -- migration:revert",
-    "typeorm:delete-migrations": "rm -rf migrations/*-*.ts dist/migrations/*-*.*"
+    "typeorm": "MIGRATIONS=true env-cmd ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
+    "typeorm:run-migrations": "npm run typeorm -- migration:run -d src/config/migration.config.ts",
+    "typeorm:generate-migration": "npm run typeorm -- migration:generate -d src/config/migration.config.ts src/migrations/articles",
+    "typeorm:create-migration": "npm run typeorm -- migration:create src/migrations/articles",
+    "typeorm:revert-migration": "npm run typeorm -- migration:revert -d src/config/migration.config.ts",
+    "typeorm:delete-migrations": "rm -rf src/migrations/*-*.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
