--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "MIGRATIONS=true env-cmd ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
+    "typeorm": "env-cmd ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:run-migrations": "npm run typeorm -- migration:run -d src/config/migration.config.ts",
     "typeorm:generate-migration": "npm run typeorm -- migration:generate -d src/config/migration.config.ts src/migrations/articles",
     "typeorm:create-migration": "npm run typeorm -- migration:create src/migrations/articles",
     "typeorm:revert-migration": "npm run typeorm -- migration:revert -d src/config/migration.config.ts",
-    "typeorm:delete-migrations": "rm -rf src/migrations/*-*.ts"
+    "typeorm:delete-migrations": "rm -rf ./src/migrations dist/src/migrations"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
