--- a/.env-example
+++ b/.env-example
@@ -6,9 +6,11 @@ POSTGRES_DB=articles
 # app
 NODE_ENV=development
 WEB_URL=http://localhost:3000
+PORT=3000
 
 # app > db
 DATABASE_URL=postgres://user:password@127.0.0.1/articles
+MIGRATIONS=true
 
 # app > google
 GOOGLE_CALLBACK_URL=http://localhost:3000/google-oauth/callback
