--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "env-cmd ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "typeorm:run-migrations": "npm run typeorm -- migration:run -d src/config/migration.config.ts",
+    "typeorm:run-migrations": "npm run prebuild && npm run build && npm run typeorm -- migration:run -d src/config/migration.config.ts",
     "typeorm:generate-migration": "npm run typeorm -- migration:generate -d src/config/migration.config.ts src/migrations/articles",
     "typeorm:create-migration": "npm run typeorm -- migration:create src/migrations/articles",
     "typeorm:revert-migration": "npm run typeorm -- migration:revert -d src/config/migration.config.ts",
-    "typeorm:delete-migrations": "rm -rf ./src/migrations dist/src/migrations"
+    "typeorm:delete-migrations": "rm -rf **/migrations dist/**/migrations"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -81,6 +80,9 @@
     "typescript": "^5.1.3"
   },
   "jest": {
+    "setupFiles": [
+      "dotenv/config"
+    ],
     "moduleFileExtensions": [
       "js",
       "json",
