add custom cache provider, add cache for users and fix for articles, add responses for all, fix validation

--- a/docker/infra.yml
+++ b/docker/infra.yml
@@ -4,6 +4,7 @@ services:
   postgres:
     env_file:
       - ../.env
+    container_name: postgres
     image: postgres
     ports:
       - '5432:5432'
